# social-media-data-collector

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.agents/: README.md  collector-contract.md  project-context.md  safety-and-compliance.md  workflows.md
apps/api/app/: config.py  db.py  main.py
apps/api/app/routes/: comments.py  exports.py  keywords.py  schedules.py  sentiment.py
apps/dashboard/: package.json
apps/dashboard/src/components/: CommentTable.tsx  ExportButton.tsx  KeywordManager.tsx  ScheduleManager.tsx  SentimentChart.tsx
apps/dashboard/src/lib/: api.ts
apps/dashboard/src/pages/: index.tsx
apps/dashboard/src/types/: comment.ts
db/: mongo-init.js  schema.sql  seed_keywords.sql
docs/: README.md  architecture.md  collector-strategy.md  data-collector-target-strategy.md  data-contract.md  labeling-guideline.md  source-limitations.md
docs/runbook/: 06-instagram.md  07-threads.md  09-run-all.md  11-docker-mongodb.md  12-backfill-retention.md
pipeline/collector/: README.md  backfill.py  base.py  dedupe.py  exceptions.py  normalizer.py  run.py  web_extract.py
pipeline/collector/adapters/: app_store.py  google_play.py  instagram.py  stockbit.py  threads.py  tiktok.py  twitter.py  youtube.py
pipeline/export/: csv_export.py  excel_export.py
pipeline/scheduler/: jobs.py  run.py
pipeline/sentiment/: classifier.py  domain.json  model_indobert.py  preprocess.py  preprocessing.py  rules.py  run.py  topics.py
tests/: README.md  conftest.py  test_api.py  test_normalizer.py  test_sentiment_rules.py
tests/fixtures/: twitter_tweet.json  youtube_comment.json
tests/integration/api/: test_health_and_sentiment.py
tests/integration/pipeline/collector/: test_script_collectors_config.py
(+12 files in other folders)
