[project]
name = "bni-bions-sentiment-analysis"
version = "0.1.0"
description = "Monorepo scaffold for BNI Sekuritas and BIONS social sentiment analysis"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "apscheduler>=3.10"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["apps*", "pipeline*"]
exclude = ["data*", "db*", "docs*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
