[project]
name = "bni-bions-sentiment-analysis"
version = "0.1.0"
description = "Monorepo scaffold for BNI Sekuritas and BIONS social sentiment analysis"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "apscheduler>=3.10",
  "pymongo>=4.7"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
collectors = [
  "httpx>=0.27",
  "google-play-scraper>=1.2",
  "playwright>=1.45",
  "beautifulsoup4>=4.12",
  "instaloader>=4.13"
]
risky_collectors = [
  "twscrape>=0.15",
  "TikTokApi>=6.5"
]
indobert = [
  "torch>=2.0",
  "transformers>=4.30",
  "Sastrawi>=202311.2",
  "nltk>=3.8",
]

[tool.setuptools.packages.find]
include = ["apps*", "pipeline*"]
exclude = ["data*", "db*", "docs*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "unit: fast isolated tests for pure functions and adapter parsing",
  "integration: tests that cross module boundaries or exercise HTTP/API wiring",
  "live: opt-in tests that call external public services"
]
